# python-project-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: cli.py  core.py
{{ cookiecutter.project_slug }}/tests/{{ cookiecutter.package_name }}/: __init__.py  test_core.py
